# esp-homekit-sdk

./: .codespellrc  .gitignore  .gitlab-ci.yml  .gitmodules  MFI_README.md  README.md  outlet.c  qrcode.html
.gitlab/ci/: pre_commit.yml
components/button/: CMakeLists.txt  component.mk
components/button/button/: button.c
components/button/button/include/: iot_button.h
components/homekit/esp_hap_apple_profiles/: CMakeLists.txt
components/homekit/esp_hap_apple_profiles/include/: hap_apple_chars.h  hap_apple_servs.h
components/homekit/esp_hap_apple_profiles/src/: hap_apple_chars.c  hap_apple_servs.c
components/homekit/esp_hap_core/: CMakeLists.txt  Kconfig  component.mk  idf_component.yml
components/homekit/esp_hap_core/include/: hap.h
components/homekit/esp_hap_core/src/: esp_hap_char.c  esp_hap_controllers.c  esp_hap_database.c  esp_hap_ip_services.c  esp_hap_keystore.c  esp_hap_main.c  esp_hap_network_io.c  esp_hap_pair_setup.c  esp_hap_pair_verify.c  esp_hap_pairings.c  esp_hap_setup_payload.c  esp_hap_wifi.c  esp_mfi_dummy.c
components/homekit/esp_hap_core/src/priv_includes/: esp_hap_char.h  esp_hap_database.h  esp_hap_ip_services.h  esp_hap_main.h  esp_hap_pair_common.h  esp_hap_pair_setup.h  esp_hap_pair_verify.h  esp_hap_wifi.h  esp_mfi_debug.h
components/homekit/esp_hap_extras/: CMakeLists.txt  component.mk
components/homekit/esp_hap_extras/include/: hap_bct_http_handlers.h  hap_fw_upgrade.h
components/homekit/esp_hap_extras/src/: hap_bct_http_handlers.c  hap_fw_upgrade.c
components/homekit/esp_hap_platform/: CMakeLists.txt  Kconfig  component.mk
components/homekit/esp_hap_platform/include/: esp_mfi_i2c.h
components/homekit/esp_hap_platform/src/: esp_mfi_aes.c  esp_mfi_i2c.c  esp_mfi_rand.c  hap_platform_httpd.c  hap_platform_keystore.c
components/homekit/esp_hap_platform/src/esp32/: esp_mfi_sha.c  hap_platform_httpd.c  hap_platform_os.c
components/homekit/hkdf-sha/: CMakeLists.txt  component.mk
components/homekit/hkdf-sha/upstream/: .gitignore  Makefile  README.md  hkdf.c  hmac.c  rfc6234.txt  usha.c
components/homekit/json_generator/: CMakeLists.txt  component.mk  idf_component.yml
components/homekit/json_parser/: CMakeLists.txt  component.mk  idf_component.yml
components/homekit/mu_srp/: CMakeLists.txt  component.mk  mu_bignum.h  mu_srp.c  mu_srp.h
components/led/: CMakeLists.txt  Kconfig  component.mk
components/led/led/: led.c
components/led/led/include/: iot_led.h
examples/aws-iot/: CMakeLists.txt  Makefile  README_EN.md  sdkconfig.defaults
examples/aws-iot/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  component.mk  hap_aws_iot.h  hap_aws_iot_pub_sub.c  hap_aws_iot_thing_shadow.c
examples/bridge/: CMakeLists.txt  Makefile
examples/bridge/main/: app_main.c
examples/common/app_hap_setup_payload/: CMakeLists.txt  app_hap_setup_payload.c  app_hap_setup_payload.h
examples/common/app_wifi/: CMakeLists.txt  Kconfig.projbuild  app_wifi.c  app_wifi.h
examples/common/qrcode/: CMakeLists.txt
examples/common/qrcode/src/: qrcode.c
examples/data_tlv8/: CMakeLists.txt  Makefile  partitions_hap.csv  sdkconfig.defaults
examples/data_tlv8/main/: Kconfig.projbuild  app_main.c
examples/emulator/: CMakeLists.txt  Makefile  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32c6
examples/emulator/main/: CMakeLists.txt  app_main.c  cmd_register.c  console_init.c  console_settings.c  console_settings.h  emulator.c  emulator.h
examples/ethernet_bridge/: CMakeLists.txt  Makefile  sdkconfig.defaults
examples/ethernet_bridge/main/: CMakeLists.txt  Kconfig.projbuild  app_eth.c  app_eth.h  app_main.c
examples/fan/: CMakeLists.txt  Makefile  sdkconfig.defaults
examples/fan/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c
examples/led_strip/: Makefile
examples/led_strip/main/: CMakeLists.txt  app_main.c  led_strip.c  led_strip.h  neopixel.c  neopixel.h
examples/lightbulb/: CMakeLists.txt  Makefile
examples/lightbulb/main/: CMakeLists.txt  app_main.c  lightbulb.c  lightbulb.h
examples/smart_outlet/: CMakeLists.txt  Makefile  sdkconfig.defaults  sdkconfig.defaults.esp32c6
examples/smart_outlet/main/: Kconfig.projbuild  app_main.c  idf_component.yml  outlet.h
tools/factory_nvs_gen/: README.md  factory_nvs_gen.py
tools/idf_tools/mass_mfg/: mfg_gen.py
tools/idf_tools/nvs_partition_generator/: README.rst  nvs_partition_gen.py
tools/mfg_homekit/: README.md  hk_mfg_gen.py  setup_info_gen.py
tools/setup_payload_gen/: README.md  setup_payload_gen.py
tools/srp/: srp_tool.py
